[package]
name = "tcprs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
test-log = "0.2"
